add some docs to the readme about migrating to Jetty12
Signed-off-by: Lachlan Roberts <lachlan@webtide.com>